Fix attachment upload dropdown z-index issue

--- a/file/style/be.bastelstu.chat.less
+++ b/file/style/be.bastelstu.chat.less
@@ -455,6 +455,10 @@
 		}
 	}
 	
+	#timsChatUploadDropdownMenu {
+		z-index: 398;
+	}
+	
 	#timsChatCopyrightDialog {
 		> div {
 			background-repeat: no-repeat;
